[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors = ["Adin Schmahmann <adin.schmahmann@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]

num_enum = { version = "0.5.7" }
libipld = {version = "0.13.1"}
integer-encoding = { version = "3.0.3"}
hex = { version = "0.4" }