[package]
name = "bt_dirv1"
version = "0.1.0"
edition = "2021"
authors = ["Adin Schmahmann <adin.schmahmann@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

libipld = {version = "0.13.1"}
wac = { path = "../wac" }
example = { path = "../example" }
hex = { version = "0.4" }
ouroboros = {version = "0.15.0" }